--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   avatar           : "/images/portrait.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Computers are simply a tool that should serve humans, not the other way around."
   location         : "Gurgaon, India"
-  email            : "pavan.iwork@gmail.com"
+  email            : "praju@themacguy.in"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
