--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast" # "default", "air", "aqua", "contrast", "d
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Pavan Raju"
+title                    : "The Mac Guy"
 title_separator          : "-"
 name                     : "Pavan Raju"
 description              : "My Personal Blog."
