Fixed the new window behaviour

--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/iampavan"{:target="_blank"}
+      url: "https://github.com/iampavan"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
