--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ title                    : "The Mac Guy"
 title_separator          : "-"
 name                     : "Pavan Raju"
 description              : "My Personal Blog."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://themacguy.in # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : iampavan # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/images/logo-1.png"
+repository               : iampavan/themacguy # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser                   : /assets/images/misc/teaser-missing.png"
+logo                     : "/assets/images/pa1-custom/logo-1.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -110,7 +110,7 @@ author:
   avatar           : "/images/portrait-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Computers are simply a tool that should serve humans, not the other way around."
   location         : "Gurgaon, India"
-  email            : 
+  email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
