--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ title                    : "The Mac Guy"
 title_separator          : "-"
 name                     : "Pavan Raju"
 description              : "My Personal Blog."
-url                      : https://themacguy.in # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://themacguy.in"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : iampavan/themacguy # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "iampavan/themacguy"
 teaser                   : "/assets/images/misc/teaser-missing.png"
 logo                     : "/assets/images/pa1-custom/logo-1.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
