--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Pavan Raju"
-  avatar           : "/images/portrait-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/pa1-custom//portrait-2.jpg"
   bio              : "Computers are simply a tool that should serve humans, not the other way around."
   location         : "Gurgaon, India"
   email            :
