--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url                      : "https://themacguy.in"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "iampavan/themacguy"
 teaser                   : "/assets/images/misc/teaser-missing.png" # /assets/images/500x300.png
-logo                     : "/assets/images/pa1-custom/logo-1.png"
+logo                     : "/assets/images/pa1-custom/logo-1.png" # "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
