--- a/_config.yml
+++ b/_config.yml
@@ -232,6 +232,8 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-seo-tag
+
 
 # mimic GitHub Pages with --safe
 whitelist:
