--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
       # url: mailto:praju@lavabit.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://themacguy.in"
+      url: "https://themacguy.in/contact/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
