Changed location to BLR

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   name             : "Pavan Raju"
   avatar           : "/assets/images/pa1-custom//portrait-2.jpg"
   bio              : "Computers are simply a tool that should serve humans, not the other way around."
-  location         : "Delhi NCR, India"
+  location         : "Bangalore, India"
   email            :
   links:
     - label: "Email"
